<resources>
    <string name="app_name">OpenEvents</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="test">This is a test, if you see this, you succeed. Congrats!</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="last_name">Last name:</string>
    <string name="API_Failure">Error de connexion con la API</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="Events">Events</string>
    <string name="myevents">My Events</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name:</string>
    <string name="edit">Edit Profile</string>
    <string name="email">Email:</string>
    <string name="logout_message">Te has desconectado</string>
    <string name="event_image">Event Image</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="image">Image (URL):</string>
    <string name="password">Password:</string>
    <string name="pass_vacio">(Campo vacio = No modificación)</string>
    <string name="add">Añadir</string>
    <string name="Description">Description:</string>
    <string name="category">Category:</string>
    <string name="sartdate">Start Date:</string>
    <string name="enddate">End Date:</string>
    <string name="date_hint">(YYYY-MM-DDTHH:mm:ss)</string>
    <string name="eventimage">EventImage</string>
    <string name="join">Join</string>
    <string name="search">Buscar</string>
    <string name="Friend">Send Friend Request</string>
    <string name="id">Id:</string>
    <string name="search_users">Search:</string>
    <string name="location">Location:</string>
    <string name="nparticipators">Max Participants:</string>
    <string name="editevent">Edit Event</string>
    <string name="deletevent">Delete Event</string>
    <string name="best">Best Events</string>
    <string name="sort_by">Sort by:</string>
    <string name="by_category">By Category</string>
    <string name="sports">Sports</string>
    <string name="music">Music</string>
    <string name="arts">Arts</string>
    <string name="film">Film</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="business">Business</string>
    <string name="politics">Politics</string>
    <string name="other">Other</string>
    <string name="date">By Date</string>
    <string name="location_s">By Location</string>
    <string name="category_s">By Category</string>
    <string-array name="EventCategories">
        <item>Sports</item>
        <item>Music</item>
        <item>Arts</item>
        <item>Film</item>
        <item>Food</item>
        <item>Travel</item>
        <item>Business</item>
        <item>Politics</item>
        <item>Other</item>
    </string-array>
</resources>