<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/EventView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/EventEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EventView"
                android:layout_margin="10dp" />
            <TextView
                android:id="@+id/DescriptionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EventEdit"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/DescriptionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DescriptionView"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/CategoryView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DescriptionEdit"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/CategoryEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CategoryView"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/StartDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sartdate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CategoryEdit"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/StartDateEdit"
                android:hint="@string/date_hint"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StartDateView"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/EndDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enddate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StartDateEdit"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/EndDateEdit"
                android:hint="@string/date_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EndDateView"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EndDateEdit"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/ImageEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ImageView"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/LocationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ImageEdit"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/LocationEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LocationView"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/nparticipatorsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nparticipators"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LocationEdit"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/nparticipatorsEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nparticipatorsView"
                android:layout_margin="10dp" />


            <Button
                android:id="@+id/SaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>